fix bug(send email note), change feedback

--- a/site-template/healdi/index.html
+++ b/site-template/healdi/index.html
@@ -262,6 +262,7 @@
                                              senderPhone : document.getElementById("phone").value,
                                             senderGender : selectedGenderValue,
                                             senderService : selectedServiceValue,
+                                            senderNote : document.getElementById("note").value,
                                             senderDate : document.getElementById("date").value,
                                             senderTime : document.getElementById("time").value,
                                             
@@ -511,7 +512,7 @@
                     </div>
                     <div class="col-lg-4 col -md-6 item">
                         <div class="fun-fact">
-                            <div class="timer" data-to="50" data-speed="2000"></div>
+                            <div class="timer" data-to="90" data-speed="2000"></div>
                             <span class="medium">Phản hồi hài lòng</span>
                         </div>
                     </div>
