remove status line

--- a/site-template/healdi/departments-3.html
+++ b/site-template/healdi/departments-3.html
@@ -52,12 +52,12 @@
     <div class="top-bar-area inc-pad inc-border">
         <div class="container">
             <div class="row align-center">
-                <div class="col-lg-6 info">
-                    <p>
-                        Tưng bừng khai trương! Giá chỉ từ <strong>199K</strong> cho mỗi dịch vụ! Áp dụng đến hết ngày 31/3
-                    </p>
+<!--                <div class="col-lg-6 info">-->
+<!--                    <p>-->
+<!--                        Tưng bừng khai trương! Giá chỉ từ <strong>199K</strong> cho mỗi dịch vụ! Áp dụng đến hết ngày 31/3-->
+<!--                    </p>-->
 
-                </div>
+<!--                </div>-->
                 <div class="col-lg-6 text-right item-flex">
                     <div class="info">
                         <ul>
